[package]
name = "jupiter-cpi"
version = "6.0.0"
edition = "2021"
description = "Anchor CPI client for the Jupiter program."
authors = ["Siong Ong <siong@raccoons.dev>"]
repository = "https://github.com/jup-ag/jupiter-cpi"
license = "Apache-2.0"
keywords = ["solana", "anchor", "cpi", "jupiter"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = "0.3.1"
anchor-lang = "0.30.1"
solana-program = "1.18.22"
jupiter-amm-interface = { git = "https://github.com/Blueprint-Finance/jupiter-amm-interface", branch = "anchor/0.30.1" }
rand = "0.8.5"
solana-sdk = "1.18.22"
